2008-11-26  Hubert Figuiere  <hub@figuiere.net>

	* exempi/tests/Makefile.am (TESTS_ENVIRONMENT): 
	BOOST_TEST_CATCH_SYSTEM_ERRORS=no is set before running
	the test. This avoid a failure because of system() on 
	boost 1.35 and later.
	See https://svn.boost.org/trac/boost/ticket/1723

2008-11-24  Hubert Figuiere  <hub@figuiere.net>

	* source/XMPFiles/FormatSupport/ReconcileTIFF.cpp (ImportSingleTIFF_ASCII): 
	Re-enable the conversion for UNIX. Disabled in the original SDK.

	* exempi/tests/Makefile.am:
	* exempi/tests/fdo18635.jpg:
	* exempi/tests/test-bgo.cpp
	Don't crash on not so valid Exif. (Closes #18635)
	And test case.

2008-11-18  Hubert Figuiere  <hub@figuiere.net>

	* exempi/libexempi.sym, exempi/Makefile.am (libexempi_la_LDFLAGS): 
	Use symbol file. (Closes #16139)

	* samples/testfiles/BlueSquare.gif,
	samples/testfiles/Makefile.am: Forgotten files.

	* NEWS,	configure.ac, exempi/Makefile.am, 
	exempi/tests/test2.cpp, exempi/tests/testcore.sh, 
	samples/Makefile.am, samples/source/Makefile.am, 
	source/XMPFiles/FileHandlers/Makefile.am,
	source/XMPFiles/FormatSupport/Makefile.am,
	source/XMPCore/Makefile.am, source/common/Makefile.am:
	Fix the build system.
	* source/XMPFiles/FileHandlers/AVCHD_Handler.cpp
	source/XMPFiles/FileHandlers/MP3_Handler.cpp,
	source/XMPFiles/FileHandlers/MP3_Handler.hpp,
	source/XMPFiles/FileHandlers/P2_Handler.cpp,
	source/XMPFiles/FileHandlers/SonyHDV_Handler.cpp,
	source/XMPFiles/FileHandlers/WAV_Handler.cpp,
	source/XMPFiles/FileHandlers/WAV_Handler.hpp,
	source/XMPFiles/FileHandlers/XDCAMEX_Handler.cpp,
	source/XMPFiles/FileHandlers/XDCAM_Handler.cpp,
	source/XMPFiles/FormatSupport/ID3_Support.cpp,
	source/XMPFiles/FormatSupport/ID3_Support.hpp,
	source/XMPFiles/FormatSupport/RIFF_Support.cpp,
	source/XMPFiles/FormatSupport/RIFF_Support.hpp,
	source/XMPFiles/FormatSupport/ReconcileTIFF.cpp,
	source/XMPFiles/FormatSupport/Reconcile_Impl.cpp,
	source/XMPFiles/FormatSupport/Reconcile_Impl.hpp,